compile_tests/expected/operators.stderr
error: unsupported unary operator
  --> compile_tests/src/operators.rs:10:37
   |
10 |     static UNSUPPORTED_UNARY: U32 = *&CONSTANT.to_gpu();
   |                                     ^

error: unsupported expression
  --> compile_tests/src/operators.rs:10:38
   |
10 |     static UNSUPPORTED_UNARY: U32 = *&CONSTANT.to_gpu();
   |                                      ^

error: unsupported binary operator
  --> compile_tests/src/operators.rs:12:56
   |
12 |     static UNSUPPORTED_BINARY: U32 = CONSTANT.to_gpu() & CONSTANT.to_gpu();
   |                                                        ^

error[E0600]: cannot apply unary operator `!` to type `U32`
   --> compile_tests/src/operators.rs:9:33
    |
9   |     static INVALID_UNARY: U32 = !CONSTANT.to_gpu();
    |                                 ^^^^^^^^^^^^^^^^^^ cannot apply unary operator `!`
    |

error[E0308]: arguments to this function are incorrect
   --> compile_tests/src/operators.rs:11:34
    |
11  |     static INVALID_BINARY: U32 = CONSTANT.to_gpu() && CONSTANT.to_gpu();
    |                                  ^^^^^^^^---------    ----------------- expected `Bool`, found `U32`
    |                                  |
    |                                  expected `Bool`, found `U32`
    |

error[E0308]: mismatched types
  --> compile_tests/src/operators.rs:11:34
   |
11 |     static INVALID_BINARY: U32 = CONSTANT.to_gpu() && CONSTANT.to_gpu();
   |                                  ^^^^^^^^ expected `U32`, found `Bool`

error[E0369]: no implementation for `U32 & U32`
   --> compile_tests/src/operators.rs:12:56
    |
12  |     static UNSUPPORTED_BINARY: U32 = CONSTANT.to_gpu() & CONSTANT.to_gpu();
    |                                      ----------------- ^ ----------------- U32
    |                                      |
    |                                      U32
    |

error[E0277]: cannot add `Bool` to `U32`
  --> compile_tests/src/operators.rs:16:9
   |
16 |         UNSUPPORTED_BINARY += true;
   |         ^^^^^^^^^^^^^^^^^^ no implementation for `U32 + Bool`
   |
   = help: the trait `Add<Bool>` is not implemented for `U32`
   = help: the following other types implement trait `Add<Rhs>`:
             `U32` implements `Add<I32>`
             `U32` implements `Add`